# provoke

./: .gitignore  GITNOTE  LICENSE  Main.hs  provoke.cabal  provoke.config  stack.yaml
shelly/: shelly.cabal  stack.yaml
shelly/Shelly.hs/src/Shelly/: Base.hs  Find.hs
shelly/src/: Shelly.hs
src/: Lading.hs  ProvokeMain.hs  XMPP.hs
