name:                provoke
version:             0.2.4.0
synopsis:            watches events and runs shell commands in response
description:         Please see README.md
homepage:            http://github.com/haskellGardener/provoke#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Robert Lee
maintainer:          robert.lee@chicago.vc
copyright:           2015 Robert Lee
category:            Development
build-type:          Simple
cabal-version:       >=1.10


Library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:       Paths_provoke
                    -- Paths_provoke gives the program access to its .cabal version info -- Look up!
  exposed-modules:     XMPP
                       ProvokeMain
                       Lading
  build-depends:       base >= 4.7 && < 5
                     , Glob
                     , async
                     , attoparsec
                     , containers
                     , data-default
                     , filepath
                     , hinotify
                     , hostname
                     , pontarius-xmpp
                     , process
                     , shakespeare
                     , shelly
                     , shelly-extra
                     , stm
                     , text
                     , unix
                     , xml-conduit
                     , xml-types

executable provoke
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , provoke
                     -- NB this is where the library is aquired by Main.hs
